[app] Modify app module's package name to io.agora.agorachatquickstart.

--- a/Chat-Android/app/src/main/res/layout/activity_fetch_messages_from_server.xml
+++ b/Chat-Android/app/src/main/res/layout/activity_fetch_messages_from_server.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".FetchMessagesFromServerActivity">
+    tools:context="io.agora.quickstart.io.agora.agorachatquickstart.FetchMessagesFromServerActivity">
 
     <ScrollView
         android:layout_width="match_parent"
