--- a/Chat-Android/app/src/main/res/layout/activity_send_audio_message.xml
+++ b/Chat-Android/app/src/main/res/layout/activity_send_audio_message.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".SendAudioMessageActivity">
+    tools:context="io.agora.quickstart.io.agora.agorachatquickstart.SendAudioMessageActivity">
 
     <ScrollView
         android:layout_width="match_parent"
