--- a/Chat-Android/app/src/main/res/layout/activity_import_emssages.xml
+++ b/Chat-Android/app/src/main/res/layout/activity_import_emssages.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ImportMessagesActivity">
+    tools:context="io.agora.quickstart.io.agora.agorachatquickstart.ImportMessagesActivity">
 
     <ScrollView
         android:layout_width="match_parent"
